# TaskNest

./: .gitignore  README.md  main.py  pyproject.toml
src/tasknest/: gui.py  main.py  manager.py
task/: cli.py  gui.py  manager.py  storage.py
