[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tasknest"
version = "0.1.0"
description = "TaskNest - Simple Task Manager"
authors = [{name = "Alessandro P."}]
readme = "README.md"

[project.scripts]
tasknest = "tasknest.main:main"

[tool.setuptools.packages.find]
where = ["src"]